--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -23,6 +24,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.1",
     "crypto-js": "^4.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -34,6 +36,7 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "swiper": "^6.3.5",
+    "vant": "^2.10.13",
     "vue-template-compiler": "^2.6.11"
   }
 }
